feat: endpoint to show user's own life rule
